deployments/kustomize/simple-calculator/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: calculator
  labels:
    mesh: simple-calculator-mesh
    gateway: ingress-gw
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
