deployments/kustomize/simple-calculator/meshed_app.yaml

apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: simple-calculator-vs
  
spec:
  awsName: simple-calculator-service.development.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: simple-calculator-vr
        
---

apiVersion: v1
kind: Service
metadata:
  name: ingress-svc
  
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb-ip
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
    service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: "120"
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: ingress-envoy
    
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy-proxy-ingress-deployment
  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-envoy
  template:
    metadata:
      labels:
        app: ingress-envoy
    spec:
      serviceAccountName: simple-calculator-pod
      containers:
        - name: envoy
          image: 840364872350.dkr.ecr.ap-south-1.amazonaws.com/aws-appmesh-envoy:v1.18.3.0-prod
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 200m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 200Mi
